# manifold-benchmarks

./: .gitignore  CMakeLists.txt  README.md  index.html
.github/workflows/: benchmark-backfill.yml  benchmark.yml
bench/: data.js  index.html
benchmark/: manifold_benchmark.cpp  manifold_benchmark_minimal.cpp
